# volcascade

./: .gitignore  LICENSE  README.md  RESULTS.md  TEST_DELETE_ME.md  pyproject.toml
data/: ground_truth_events.csv
docs/: CASCADE_OPERATOR_THEORY.md  DESIGN_MEMO.md  IMPLEMENTATION_NOTES.md  METHODOLOGY.md
experiments/: adversarial_vol_peak.py  benchmark_comparison.py  cascade_slope_cross_asset.py  cross_asset_audit.py  cross_asset_test.py  direction_oos.py  garch_complementarity.py  granger_causality.py  h2_v2_vol_peak_exit.py  h3_ground_truth.py  h3_ground_truth_v4.py  h3_v11_final.py  h3b_garch_residual_test.py  h3b_panel_garch_residual.py  h4_frontier.py  operator_learning.py  out_of_sample_test.py  pilot_spy.py  pilot_v2_vol_peak.py  plot_pilot.py  plot_pilot_v2.py  preregistered_oos.py  rate_simulation.py  referee_audit.py  reframed_summary.py  sensitivity_h1.py  sensitivity_h1_v2.py  vol_peak_day_test.py  vol_peak_sensitivity.py  vol_timing_simple.py  vol_timing_strategy.py
paper/: README.md  build_paper.py  paper_part2.md  paper_part3.md  paper_preamble.md  v1_part2.md
paper_latex_v2/: README.md  build_paper.py  figures_urls.json
paper_v3/: README.md
results/: CASCADE_SLOPE_README.md  CROSS_ASSET_README.md  MECHANISM.md  REFEREE_AUDIT_README.md  RESULTS.md  RESULTS_part1.md  RESULTS_part3.md  adversarial_fno_results.json  adversarial_vol_peak.json  benchmark_comparison.json  bessel_bias_results.json  better_strategy.json  cascade_slope_per_asset.json  cascade_slope_pooled.json  cascade_slope_rolling.json  cer_2025.json  cer_with_costs.json  (+40 more)
(+37 files in other folders)
