[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volcascade"
version = "0.1.0.dev0"
description = "A term structure of differentiation order for realized volatility — regime detection, decoupling, and cross-market comparison"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Nitya Hapani"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "hmmlearn>=0.3",
    "ruptures>=1.1",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
viz = [
    "matplotlib>=3.7",
]
data = [
    "yfinance>=0.2",
]

[project.urls]
Homepage = "https://github.com/Nityahapani/volcascade"
Repository = "https://github.com/Nityahapani/volcascade"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
